<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme"
    tools:context="com.uet.towerdefense.MainActivity">

    <TextView
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/tower_defense"
        app:layout_constraintBottom_toTopOf="@id/btn_start" />

    <Button
        android:id="@+id/btn_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_high_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/high_score"
        app:layout_constraintTop_toBottomOf="@id/btn_start"
        tools:layout_editor_absoluteX="40dp" />
    <Button
        android:id="@+id/btn_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="28dp"
        android:backgroundTint="#ff0"
        android:text="@string/guide"
        app:layout_constraintTop_toBottomOf="@id/btn_high_score"
        tools:layout_editor_absoluteX="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>