<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:background="#03A9F4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/guidePlay"
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="20dp"
        android:text="@string/guide"
        android:textColor="#ff0"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="176dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="10dp"
        android:text="@string/guideContent"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidePlay" />
    <ImageView
        android:id="@+id/boss"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="280dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bossenemy" />

    <ImageView
        android:id="@+id/tanker"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tankerenemy" />

    <ImageView
        android:id="@+id/smaller"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="420dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/smallerenemy" />

    <ImageView
        android:id="@+id/sniper"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="490dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/snipertower" />

    <ImageView
        android:id="@+id/machinegun"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="574dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/machineguntower" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/boss"
        app:layout_constraintStart_toEndOf="@+id/boss"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tanker"
        app:layout_constraintStart_toEndOf="@+id/tanker"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/smaller"
        app:layout_constraintStart_toEndOf="@+id/smaller"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/sniper"
        app:layout_constraintStart_toEndOf="@+id/sniper"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/machinegun"
        app:layout_constraintStart_toEndOf="@+id/machinegun"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>